15.Security/ValidatingAdmissionPolicy/restrict-deploy-replicas/policy.yaml
---

# The Policy to Apply:
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "demo-policy.example.com"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    # Rule1: Prevents creation of deployment with too many Pods
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
    # Rule2: Prevents scaling of deployment with too many Pods (see "deployments/scale" in resources)
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments/scale"]
  validations:
    - expression: "object.spec.replicas <= 5"

---

# Binding of the Policy to Namespaces with the environment=test label
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "demo-binding-test.example.com"
spec:
  policyName: "demo-policy.example.com"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: test
